ShipTech10/app/css/custom.css
/* ... */
			
            .form_input_Vessel input[disabled="disabled"] {
                cursor: default;
            }

            .gorExpandCounterpartyComments {
                position: absolute;
                height: 100%;
                right: 0;
                background-color: #fff;
                font-size: 25px;
                color: #547a83;
                top: 0;
                width: 20px;
                text-align: center;
                border-right: 3px solid #d1d8dd;
                cursor: pointer;
            }

            .isPreferredProduct label.mt-checkbox span {
                box-shadow: 0px 0px 0px 3px #fff, 0px 0px 0px 5px #86cdd8;
	            margin-top: 7px;
	            top: -5px !important;
            }

            .isNotPreferredProduct label.mt-checkbox span {
	            margin-top: 7px;
	            top: -11px !important;
            }

            .isNotPreferredProduct.hasOffer label.mt-checkbox span {
                top: -5px !important;
            }

            .GORpriceCheckbox.hasOffer label.mt-checkbox span{
                margin-top: 1px !important;
            }

			#group_of_requests_table .mt-checkbox>span {
				width:23px;
				height:23px;
			}
			#group_of_requests_table .mt-checkbox>span:after, #group_of_requests_table .mt-custom-checkbox>span:after {
			    left: 7px;
			    top: 2px;
			    width: 8px;
			    height: 14px;
			}

            #jqgh_flat_invoices_app_complete_view_list_checkbox {
                display: none;
            }

            [screen="'treasuryreport'"] #jqgh_flat_invoices_app_complete_view_list_checkbox {
                display: block;
            }

            /*.timelineCell:first-child {
    border-right: 1px solid #bfbfbf;
}*/

            .vis-label.groupTable:after {
                content: "";
                position: absolute;
                width: 1px;
                background: #bfbfbf;
                height: 100%;
                left: 50%;
            }

            .timelineRow {
                display: table;
                /*height: 100%;*/
            }

            .groupTable .vis-inner {
                /*height: 100%;*/
            }

            .timelineCell {
                display: table-cell;
                /*height: 100%;*/
                width: 120px;
                padding: 0 5px;
                vertical-align: middle;
            }

            .timelineContainer {
                margin-top: 26px;
            }

            .timelineContainerForm span {
                margin-right: 20px
            }

            .timelineContainerForm span b {
                margin-right: 10px
            }

            .minimumPrice>.vis-item-content {
                border: 3px solid red;
            }

            .group_specGroupParameters #grid_specGroupParameters {
                height: 420px;
            }

            .st-content-action-icons span.icon.fa-save {
                font-size: 21px;
                line-height: 1;
                color: #99a5b6;
            }

            #schedule_calendar_table_wrapper .dataTables_scrollHead {
                width: 100%!important;
				overflow-y: scroll !important;	
            }
            #schedule_calendar_table_wrapper .dataTables_scrollBody {
				overflow-y: scroll !important;	
                width: 100%!important;
            }
            

            .ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td {
                white-space: nowrap !important;
            }

            input.form-control.ng-touched.ng-not-empty.ng-dirty.ng-valid-parse.ng-invalid {
                border-color: red
            }

            div.col-md-4.edit_form_fields_pumpingRateHSFO_masters {
                clear: left;
            }

            .confirm_delete_product {
                padding-bottom: 30px;
                color: #fcb450;
                font-weight: bold;
            }

            .confirm_delete_product_subject {
                padding-left: 15px;
            }

/* contract planning */

#gbox_flat_contract_planning table thead th:nth-child(1),
#gbox_flat_contract_planning table tbody tr td:nth-child(1),
#gbox_flat_contract_planning table thead th:nth-child(2) .colMenu,
#gbox_flat_contract_planning table thead th:nth-child(2) .ui-jqgrid-sortable,
#gbox_flat_contract_planning table thead th:nth-child(3) .colMenu,
#gbox_flat_contract_planning table thead th:nth-child(3) .ui-jqgrid-sortable{
    display: none;
}

/* add missing borders*/
#gbox_flat_contract_planning table thead th:nth-child(2),
#gbox_flat_contract_planning table tbody tr td:nth-child(2){
        border-left: 1px solid #e7ecf1;
}
            .uomWidth{
                width: 50px!important
            }
.dynamic_form_editor #formBuilderContent .group_InvoiceTotalConversion, .dynamic_form_editor #formBuilderContent  .group_InvoiceSummary{
	padding-right:  0px !important;
}

.checkbox_keep_height{
    min-height: 44px;
}

.invoiceslist .asc_jqgrid__container.section_top .col.center {
	width: 67%!important;
}

.sweetConfirmModal:focus {
	outline: none;
}

.contractPlanningContractTypeahead input {
    float: left;
    width: calc(100% - 25px) !important;
    border-right: 0;
}
.contractPlanningContractTypeahead i.fa {
    float: left;
    text-align: center;
    width: 25px;
    padding: 0;
    line-height: 33px;
    border-left: 1px;
    height: 34px;
}


.confirm_offer_dialog_confirmed_quantity input{
    width: 80%;
    float: left;
}
.confirm_offer_dialog_confirmed_quantity input.ng-empty{
    width: 80%;
    float: left;
    border: 1px solid red;
}
.confirm_offer_dialog_confirmed_quantity span.input-group-addon{
    width: 20%;
    float: right;
    height: 100%;
    line-height: 20px;
}


.navigationLink.hasLink {
	cursor: pointer !important;
}


a[disabled]{
    background-color: #eee !important;
    pointer-events: none;
    cursor: not-allowed;
}
/* ... */

